# acci_framework

./: .cursorignore  .cursorrules  .dockerignore  .editorconfig  .gitignore  .mutants.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml  devbox.json  rust-toolchain.toml  session_patch.diff
.config/: nextest.toml
.github/: copilot-instructions.md
.sqlx/: query-01768eece02ac666161e15378b9d2fd19c301cafcfd21d76703ee16ff920c610.json  query-06083a4c776d2a298534fd48926453c3674bf240df73a06473f719156308c1f6.json  query-0ee023b175e3e6efcb60f00a82e7692ca2e3bac2edaecc7df0431a43a8946827.json  query-147d8cc73c61802f4236de964491920b07f15b8ad6be64727a07cc0ac2e391e0.json  query-1694e0df114ff87fec3ce6ac7aa41d25d4c86aa2fc27594b8fe134c18fa1b8a1.json  query-22b6e77a5896890fc111720e5cba550cc23024c51e834b761c28d879011bb530.json  query-238fa4dec2625ab801409a3c4b4af3ea93e1bbf050c82a48070aa862a80b6760.json  query-2d19d88c0a261e06fcfe8e24d57280bac890ed341d454664229aed9f370ae40c.json  query-2d662bff64a474490208469b30c25dc658c1f818aa82ec34e040be7c73909359.json  query-3194994a9139868f3e2a7326ea23ee7ef9d1461fbb3d6cc3fe56ca1316f4abc5.json  query-36bb2117f53baf96c5e1354ac83f78d2fd1b6aefae9a798cdab4342dd4f71211.json  query-3f3de5e371d00785b42e89b7993f7258b80e4955461e79dee47085ef41f31d13.json  query-41356e007210265fc135442e0447fffb3c55ce278f9291cf0b9280ea16688c82.json  query-44bec8003ab76b8b34cd7cdd7428ed55dc0aa36f046dc66247915726f95c3012.json  query-46de072c697c99ca9d0626f3913d29cfe3096ea912898fcfaf5175dad300aea9.json  query-47ca0580284f4f59fdae7c31c52772e26a6046f5ff7f00b7eb79800693672bb6.json  query-5494847f5b9158da1f73c32dd6a99cc8017d5a0bc135feaf8f27cc3b702f1a75.json  query-59b01839b5712698cf48422f067ded9d42259b776b20df3741c8fa5f09bd686f.json  query-5ba71519f825a4a5ee02da035cd3002ce74a5caacd75b3dbb92b095ee8a7dae5.json  query-5ff05275383a75522fa656d6ce0a2adfac45b35ac051a9d2f4a3c3180ef07b71.json  query-69f405c252097b65015888fe0296645c37163413cb36090257d46cfadc9466f7.json  query-6b7ed35dd952310bd3f7654ab9d4858ff4b4654d40ac4121ee758fe587af9a03.json  query-6e6c959fff37ef51135b68d184c01e1a26df4bc91fa5b6992779e3685bf218c1.json  query-6ffe751d70c44ba660b773611ac6f3eaf542abed41e4b3f0d3357c9fc1f35420.json  query-717b9511e7514d4f9d9bbd181d2945c2f1e619424d741841a16f7251cc9a0959.json  query-75b013cd790c344570b98f9fd6c53a548b94d12cf6c737aefc981492c159f086.json  query-7a931ebec2bacada5d5beba5f8f51be3dea8c13355015e9033308ce00f99a43b.json  query-7b1586596cb09f16907e7bb4765eee609e5a231b6626a2387b75e6a09304c627.json  query-7d3f7fd9b94c64d62cff7bc9f20926153cae28928738318db0766d11ed1916bd.json  query-8206476af220886b58f2bef42129590dcc96a4f2b581f0f30ab0330d7b71d02b.json  (+37 more)
benches/: auth_flow_bench.rs
crates/api/: Cargo.toml  README.md
crates/api/src/: config.rs  documentation.rs  lib.rs  monitoring.rs  response.rs  router.rs  validation.rs
crates/api/src/handlers/: README.md  auth.rs  example.rs  example_router.rs  example_test.rs  mod.rs  tenant.rs  verification.rs  webauthn.rs
crates/api/src/middleware/: error_handling.rs  logging.rs  mod.rs  tenant.rs
crates/auth/: Cargo.toml
crates/auth/migrations/: 20240223001_create_users.sql
crates/auth/src/: config.rs  lib.rs
crates/auth/src/handlers/: mod.rs  session.rs
crates/auth/src/models/: mod.rs  tenant.rs  totp.rs  user.rs  verification.rs  webauthn.rs
crates/auth/src/repository/: mod.rs  postgres.rs  postgres_totp.rs  postgres_verification.rs  postgres_webauthn.rs  tenant_aware.rs  totp_repository.rs  verification_repository.rs  webauthn_repository.rs
crates/auth/src/security/: bruteforce.rs  config.rs  credstuffing.rs  fingerprint.rs  mod.rs  ratelimit.rs  replay.rs  types.rs
crates/auth/src/services/: email_provider.rs  message_provider.rs  mod.rs  session.rs  sms_provider.rs  tenant.rs  totp.rs  user.rs  verification.rs  webauthn.rs
crates/auth/src/services/tests/: mod.rs  session_verification_tests.rs  verification_tests.rs
crates/auth/src/services/tests/mocks/: mod.rs
crates/auth/src/session/: mod.rs  mod.rs.orig  mod.rs.rej  types.rs
crates/auth/src/session/enhanced_security/: models.rs  repositories.rs
crates/auth/src/utils/: jwt.rs  password.rs
crates/auth/tests/: forced_session_termination.rs  jwt_tests.rs  password_tests.rs
crates/auth/tests/src/helpers/: session_test_helper.rs
crates/auth/tests/src/mocks/: session_repository_mock.rs
crates/core/: Cargo.toml
crates/core/migrations/: 20240223000000_create_users_table.sql  20240223_initial.sql
crates/core/src/: config.rs  database.rs  error.rs  lib.rs  telemetry.rs
crates/core/src/database/: tests.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs  models.rs  prelude.rs  routes.rs  utils.rs
crates/web/src/components/: lib.rs  mod.rs
crates/web/src/components/auth/: login_form.rs  mod.rs  registration_form.rs  verification_form.rs  webauthn_form.rs
crates/web/src/components/common/: error_display.rs  loading_indicator.rs  mod.rs
crates/web/src/components/layout/: footer.rs  mod.rs  navigation.rs
crates/web/src/handlers/: auth.rs  mod.rs  verification.rs
crates/web/src/pages/: home.rs  login.rs  mod.rs  register.rs  verify.rs
crates/web/src/services/: auth.rs  leptos.rs  mod.rs
docs/: API_SPECIFICATION.md  (+10 more)
tests/: Cargo.toml
tests/api/: README.md  SUMMARY.md  mod.rs
tests/api/mocks/: mod.rs
tests/api/src/: auth_handler_test.rs  middleware_test.rs  mod.rs  router_test.rs  validation_test.rs  verification_test.rs
tests/auth/: mod.rs  repository_test.rs  session_test.rs  user_service_test.rs
tests/auth/src/: session_integration_tests.rs  user_integration_tests.rs
tests/auth/src/helpers/: session_test_helper.rs
tests/auth/src/mocks/: mod.rs  session_repository_mock.rs
tests/database/: migration_test.rs  mod.rs  session_repository_test.rs
tests/e2e/: mod.rs
tests/security/: auth_flow_test.rs  mod.rs
tests/src/: api.rs  lib.rs  mod.rs
tests/src/auth/: mod.rs
tests/src/database/: mod.rs
tests/src/fixtures/: mod.rs
tests/src/helpers/: database.rs  mod.rs
tests/src/mocks/: mod.rs
tests/src/security/: mod.rs
(+99 files in other folders)
