[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Michael"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Web Framework & Frontend
leptos = { version = "0.6", features = ["csr", "ssr", "nightly"] }
leptos_router = { version = "0.6" }
leptos_meta = { version = "0.6" }

# Backend Framework
axum = { version = "0.7", features = ["http2", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Authentication & Security
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"
zxcvbn = "2.2"

# Database & Storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
sea-query = "0.30"
uuid = { version = "1.7", features = ["v4", "serde"] }

# Async Runtime & Utilities
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization & Data Handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde"] }

# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration & Environment
config = "0.14"
dotenvy = "0.15"

# Testing
tokio-test = "0.4"
rstest = "0.18"
mockall = "0.12"

# Security & SBOM
cyclonedx-bom = "0.4"

[package]
name = "acci_framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies for the main binary
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
