[package]
name = "acci_tests"
version = "0.1.0"
edition = "2024"

[dependencies]
acci_core = { path = "../crates/core" }
acci_auth = { path = "../crates/auth" }
acci_api = { path = "../crates/api" }
acci_web = { path = "../crates/web" }

# Web framework dependencies
axum = { workspace = true }
axum-core = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }

# Test dependencies
tokio = { workspace = true, features = ["full"] }
sqlx = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }
rstest = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
time = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
mockall = { workspace = true }
serde = { workspace = true, features = ["derive"] }
async-trait.workspace = true
