[package]
name = "acci_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "API infrastructure for the ACCI Framework"
repository = "https://github.com/your-org/acci-framework"

[features]
default = ["extended_errors"]
extended_errors = []
enable_webauthn = ["acci_auth/enable_webauthn"]

[dependencies]
# Backend Framework
axum = { workspace = true, features = ["tower-log"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["trace", "cors"] }
hyper = { workspace = true, features = ["server"] }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }

# Async & Utils
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging & Metrics
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Validator
validator = { workspace = true, features = ["derive"] }

# Authentication & Security
jsonwebtoken = { workspace = true }

# Utils
lazy_static = { workspace = true }
regex = { workspace = true, features = ["unicode-perl"] }

# Local Dependencies
acci_core = { path = "../core" }
acci_auth = { path = "../auth" }

# Additional dependencies
chrono = { workspace = true }
uuid = { workspace = true }
secrecy = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
# Test utilities are now in a separate crate at tests/
tokio-test = { workspace = true }
tracing-test = { workspace = true }
pretty_assertions = { workspace = true }
mockall = { workspace = true }

[lib]
name = "acci_api"
path = "src/lib.rs"
