[package]
name = "acci_auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
metrics = ["dep:metrics"]

[dependencies]
# Authentication
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
zxcvbn = { workspace = true }
lettre = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
totp-rs = { workspace = true }
base32 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
urlencoding = { workspace = true }

# Async & Utils
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Validation
regex = { workspace = true }
lazy_static = { workspace = true }

# Database
sqlx = { workspace = true }
sea-query = { workspace = true }

# Rate Limiting
governor = { workspace = true }

# Email is defined in workspace dependencies

# Local Dependencies
acci_core = { path = "../core" }
hex = { workspace = true }

# Add these dependencies if they don't exist
metrics = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
rstest = { workspace = true }
mockall = { workspace = true }
regex = { workspace = true }

[build-dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
