[package]
name = "acci-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Database
sqlx = { workspace = true }
sea-query = { workspace = true }
uuid = { workspace = true }

# Async & Utils
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging & Metrics
tracing = { workspace = true }
metrics = { workspace = true }

# Local Dependencies
acci-auth = { path = "../auth" }

[dev-dependencies]
tokio-test = { workspace = true }
rstest = { workspace = true }
mockall = { workspace = true }
