[package]
name = "acci_web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Frontend Framework
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }

# Web Framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async Runtime
tokio = { workspace = true }
futures = { workspace = true }

# Logging
tracing = { workspace = true }

# Time and Date
chrono = { workspace = true }

# Local Dependencies
acci_core = { path = "../core" }
acci_auth = { path = "../auth" }

[dev-dependencies]
rstest = { workspace = true }
mockall = { workspace = true }
